images loaded gem used to stop image overlap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -273,6 +273,7 @@ div.comment_votes {
 
 .masonry .item {
   width:  100%;
+  height: auto;
   float: left;
   word-wrap: break-word;
 }
@@ -289,6 +290,7 @@ div.comment_votes {
 
   .masonry .item {
     width:  40%;
+    height: auto;
     float: left;
   }
   
